mern-stack/.infra/k8s/components/services/overlays/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-services
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: mern-services
        resources:
          limits:
            memory: "4Gi"
            cpu: "2"
